[package]
name = "motor_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.7.0-rc"
zenoh_interface = {git = "https://github.com/PureRustRobot/zenoh_interface"}
zenoh_manage_utils = {git = "https://github.com/PureRustRobot/zenoh_manage_utils"}

serde = "1.0"
serde_json = "1.0"

async-std = "1.0"